Cleanup libs, configs