@@ -1,22 +1,27 @@
 @echo off
+title eXtreme Login Server Console
 :start
-echo Starting L2J Login Server.
-echo.
-java -Xmx128m -cp javolution.jar;c3p0-0.9.0.jar;mysql-connector-java-3.1.10-bin.jar;sqljdbc.jar;Server.jar; net.sf.l2j.loginserver.LoginServer
+REM -------------------------------------
+REM Default parameters for a basic server.
+java -Xmx512M -cp ./../libs/*; net.sf.l2j.loginserver.LoginServer
+REM
+REM If you have a big server and lots of memory, you could experiment for example with
+REM java -server -Xmx1536m -Xms1024m -Xmn512m -XX:PermSize=256m -XX:SurvivorRatio=8 -Xnoclassgc -XX:+AggressiveOpts
+REM -------------------------------------
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
 goto end
 :restart
 echo.
-echo Admin Restart ...
+echo Admin have restarted, please wait.
 echo.
 goto start
 :error
 echo.
-echo Server terminated abnormaly
+echo Server have terminated abnormaly.
 echo.
 :end
 echo.
-echo server terminated
+echo Server terminated.
 echo.
 pause
